split into mvn submodules